# aicool

./: .gitignore  .gitmodules  BUILD.md  Makefile  README.md
docs/res/: flowchart TD.mmd
src/: Makefile  http_servlet.cpp  main.cpp
src/action/: action_util.cpp  actions.h  file_actions.cpp  upload_action.cpp
src/html/: upload_result.html  upload_result_error_item.html
tools/mac/: ffprobe
webcool/: CMakeLists.txt  Makefile  README.md  config.cpp  config.h  http_servlet.cpp  http_servlet.h  main.cpp  platform_compat.h  resource.h  server_thread.cpp  server_thread.h  stdafx.h  webcool.rc  webcool.sln  webcool.vcxproj  webcool.vcxproj.filters  webcool_controller.cpp  webcool_controller.h  win32_gui.cpp  win32_gui.h
webcool/action/: action_util.cpp  action_util.h  actions.h  actions.h.new  actions.h.old  admin_actions.cpp  file_actions.cpp  file_lock_actions.cpp  folder_actions.cpp  image_actions.cpp  local_disk_actions.cpp  page_actions.cpp  tag_actions.cpp  upload_action.cpp  upload_action.cpp.new  video_convert_action.cpp  video_probe_action.cpp  video_resume_action.cpp
webcool/docs/res/: flowchart LR.mmd
webcool/html/: file_list_item.html  main.css  main.html  main.js  upload.html
webcool/html/bak/: files.html  upload_result_item.html
webcool/html/default/: main.css  main.html  main.js
webcool/html/en/: main.css  main.html  main.js
webcool/html/i18n/: en.js  zh.js
webcool/html/js/: 00-core-state.js  01-locks-context.js  02-tags-audio-dialogs.js  03-transcode-upload.js  04-remote-folders-import.js  05-remote-files.js  06-preview-local-disk.js  07-admin-storage.js  08-events-bootstrap.js
webcool/html/zh/: main.css  main.html  main.js
webcool/package/: README.md  build-all.sh  build-deb.sh  build-mac.sh  build-rpm.sh  common.sh
webcool/package/windows/: README.md  build-debug.bat  build-release.bat  build-windows.ps1
webcool/prompt/: prompt.txt
webcool/template/: html_renderer.cpp  html_renderer.h
webcool/tests/: README.md  delete_tag_by_name.py  unbind_tag_file.py  webcool_regression.py
